# fame

./: Anchor.toml  package-lock.json  package.json  tsconfig.json
app/src/idl/: fame.ts
keys/: test.json
programs/fame/: Cargo.toml
programs/fame/src/: errors.rs  events.rs  lib.rs  state.rs
programs/fame/src/instructions/: burn_token.rs  create_token.rs  initialize.rs  mint_token.rs  mod.rs  withdrawal_fee.rs
shell/: anchor_test.sh
tests/: fame.ts
