[package]
name = "fame"
version = "0.1.0"
description = "BondingCurve smart contracts for fame trade"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fame"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "^0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "^0.30.0", features = ["metadata"] }
spl-token = { version = "^4", features = ["no-entrypoint"] }
